--- a/libgloss/riscv/Makefile.in
+++ b/libgloss/riscv/Makefile.in
@@ -56,6 +56,7 @@ semihost_srcs = \
 	sys_wait.c \
 	semihost-sys_close.c \
 	semihost-sys_exit.c \
+	semihost-sys_fdtable.c \
 	semihost-sys_fstat.c \
 	semihost-sys_ftime.c \
 	semihost-sys_isatty.c \
